# cpp-mlpack

./: .gitignore  README.md
simple-mlp/: .dockerignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  README.md
simple-mlp/data/: data_gen.py  foo.csv
simple-mlp/src/: ffn_example.cpp  mlp_mlpack.cpp  rnn_example.cpp
simple-mlpack/: CMakeLists.txt  README.md  cpp_quickstart_1.cpp
